Store profile picture on student register
